path in env, trajectory pattern color and information

--- a/PatientTrajectory/2_countdistribution.ipynb
+++ b/PatientTrajectory/2_countdistribution.ipynb
@@ -4,28 +4,14 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "#### Count distribution of episode, patient in all the episodes, first episode, last episode"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "from dotenv import load_dotenv\n",
-    "import os\n",
-    "import pandas as pd\n",
-    "import ast\n",
-    "# Load environment variables from .env file\n",
-    "load_dotenv()"
+    "##### A. Count distribution of episode, patient in all the episodes, first episode, last episode"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "##### In all episodes (1)"
+    "##### 1. Considering and checking in all the episodes(1)- check NaN and other diagnosis only"
    ]
   },
   {
@@ -35,8 +21,12 @@
    "outputs": [],
    "source": [
     "## In all episodes before encoding of F90 - part 1\n",
+    "from allpackages import warnings, ast, os, pd, load_dotenv\n",
     "\n",
-    "trajectory_df = pd.read_csv(os.getenv('trajectory_df_path'))\n",
+    "load_dotenv()\n",
+    "\n",
+    "trajectory_df = pd.read_csv(os.getenv(\"trajectory_df_path\"))\n",
+    "\n",
     "\n",
     "# Function to check the presence of diagnosis codes starting with 'F90'\n",
     "def check_F90(diagnosis):\n",
@@ -57,11 +47,10 @@
     "    trajectory_df.groupby([\"pasient\", \"diagnosis_check\"]).size().unstack(fill_value=0)\n",
     ")\n",
     "\n",
-    "# Display the counts\n",
-    "display(trajectory_df)\n",
-    "\n",
     "# Calculate and display the number of patients with each diagnosis type\n",
-    "patients_summary = diagnosis_counts.gt(0).sum() #this operation counts the number of True values, effectively counting the number of diagnoses that occur more than 0 times\n",
+    "patients_summary = diagnosis_counts.gt(\n",
+    "    0\n",
+    ").sum()  # this operation counts the number of True values, effectively counting the number of diagnoses that occur more than 0 times\n",
     "print(\"Number of patients with each diagnosis type:\")\n",
     "print(patients_summary)\n",
     "\n",
@@ -78,10 +67,10 @@
    "outputs": [],
    "source": [
     "## In all episodes before encoding of F90 - part 2\n",
+    "from allpackages import warnings, ast, os, pd, load_dotenv\n",
     "\n",
-    "trajectory_df = pd.read_csv(\n",
-    "    os.getenv('trajectory_df_path')\n",
-    ")\n",
+    "load_dotenv()\n",
+    "trajectory_df = pd.read_csv(os.getenv(\"trajectory_df_path\"))\n",
     "\n",
     "patient_trajectory_df = trajectory_df\n",
     "print(f\"Total Episodes: {trajectory_df['episode_id'].nunique()}\")\n",
@@ -109,9 +98,8 @@
     "][\"pasient\"].nunique()\n",
     "print(f\"Unique Patients with F90: {patientWithF90}\")\n",
     "print(\n",
-    "    f\"Unique Patients without NaN and F90: {totalPatients - patientWithNaN - patientWithF90}\" \n",
-    "#or f\"Total Patient excluding NaN and F90: {patient_trajectory_df['pasient'].nunique() - (patient_trajectory_df[patient_trajectory_df['diagnosis'].str.contains('F90', na=False)]['pasient'].nunique()) - patient_trajectory_df[patient_trajectory_df['diagnosis'].isna()]['pasient'].nunique()}\"\n",
-    "\n",
+    "    f\"Unique Patients without NaN and F90: {totalPatients - patientWithNaN - patientWithF90}\"\n",
+    "    # or f\"Total Patient excluding NaN and F90: {patient_trajectory_df['pasient'].nunique() - (patient_trajectory_df[patient_trajectory_df['diagnosis'].str.contains('F90', na=False)]['pasient'].nunique()) - patient_trajectory_df[patient_trajectory_df['diagnosis'].isna()]['pasient'].nunique()}\"\n",
     ")"
    ]
   },
@@ -121,13 +109,12 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "## In all episodes after encoding of F90\n",
-    "import pandas as pd\n",
-    "import ast\n",
+    "## In all episodes after encoding of F90 -part 3\n",
+    "from allpackages import warnings, ast, os, pd, load_dotenv\n",
     "\n",
-    "trajectory_df = pd.read_csv(\n",
-    "    os.getenv('trajectory_df_path')\n",
-    ")\n",
+    "load_dotenv()\n",
+    "\n",
+    "trajectory_df = pd.read_csv(os.getenv(\"trajectory_df_path\"))\n",
     "\n",
     "forPatient_Trajectory_df = trajectory_df\n",
     "\n",
@@ -162,9 +149,7 @@
     ")\n",
     "\n",
     "# Get unique patients with ADHD == 1\n",
-    "adhd_patients = noNanTrajectory_df[noNanTrajectory_df[\"ADHD\"] == 1][\n",
-    "    \"pasient\"\n",
-    "].unique()\n",
+    "adhd_patients = noNanTrajectory_df[noNanTrajectory_df[\"ADHD\"] == 1][\"pasient\"].unique()\n",
     "print(f\"Total Patient, excluding NaN with F90: {len(adhd_patients)}\")\n",
     "\n",
     "print(\n",
@@ -176,7 +161,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "##### In the first episode of each patient"
+    "##### 2. Considering and checking first episode of each patient- check NaN and other diagnosis only"
    ]
   },
   {
@@ -185,20 +170,19 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "import pandas as pd\n",
-    "import ast\n",
+    "from allpackages import warnings, ast, os, pd, load_dotenv\n",
     "\n",
-    "trajectory_df = pd.read_csv(\n",
-    "    os.getenv('trajectory_df_path')\n",
-    ")\n",
+    "load_dotenv()\n",
     "\n",
-    "#selecting the first row of each group effectively picks out the earliest episode for each patient.\n",
+    "trajectory_df = pd.read_csv(os.getenv(\"trajectory_df_path\"))\n",
+    "\n",
+    "# selecting the first row of each group effectively picks out the earliest episode for each patient.\n",
     "first_episode_df = (\n",
     "    trajectory_df.sort_values(by=[\"pasient\", \"episode_start_date\"], ascending=True)\n",
     "    .groupby(\"pasient\")\n",
-    "    .nth(0) #This method selects the first row (n=0) from each group.\n",
+    "    .nth(0)  # This method selects the first row (n=0) from each group.\n",
     ")\n",
-    "display(first_episode_df)\n",
+    "\n",
     "print(f\"Total Unique Patients including NaN: {first_episode_df['pasient'].nunique()}\")\n",
     "episodeNaNCount = first_episode_df[\"diagnosis\"].isna().sum()\n",
     "print(f\"Unique Patients with NaN: {episodeNaNCount}\")\n",
@@ -219,7 +203,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "##### In the last episode of each patient"
+    "##### 3. Considering and checking last episode of each patient- check NaN and other diagnosis only"
    ]
   },
   {
@@ -228,12 +212,10 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "import pandas as pd\n",
-    "import ast\n",
+    "from allpackages import warnings, ast, os, pd, load_dotenv\n",
     "\n",
-    "trajectory_df = pd.read_csv(\n",
-    "    os.getenv('trajectory_df_path')\n",
-    ")\n",
+    "load_dotenv()\n",
+    "trajectory_df = pd.read_csv(os.getenv(\"trajectory_df_path\"))\n",
     "first_episode_df = (\n",
     "    trajectory_df.sort_values(by=[\"pasient\", \"episode_start_date\"], ascending=True)\n",
     "    .groupby(\"pasient\")\n",
@@ -245,7 +227,7 @@
     "    .groupby(\"pasient\")\n",
     "    .nth(-1)\n",
     ")\n",
-    "display(last_episode_df)\n",
+    "\n",
     "print(f\"Total Patient including NaN: {last_episode_df['pasient'].nunique()}\")\n",
     "episodeNaNCount = last_episode_df[\"diagnosis\"].isna().sum()\n",
     "print(f\"Patients with NaN: {episodeNaNCount}\")\n",
@@ -265,9 +247,9 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "My Kernel",
+   "display_name": "P3",
    "language": "python",
-   "name": "mykernel"
+   "name": "python3"
   },
   "language_info": {
    "codemirror_mode": {
@@ -279,7 +261,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.8"
+   "version": "3.11.8"
   }
  },
  "nbformat": 4,
