patient trajectory all task done

--- a/PatientTrajectory/3_MatplotlibPatientTeajectory.ipynb
+++ b/PatientTrajectory/3_MatplotlibPatientTeajectory.ipynb
@@ -79,9 +79,9 @@
     ")\n",
     "fig.show()\n",
     "\n",
-    "FigurePattern_folder = os.getenv(\"FigurePattern\")\n",
+    "FigureTrajectory_folder = os.getenv(\"FigureTrajectory\")\n",
     "fig.savefig(\n",
-    "    os.path.join(FigurePattern_folder, \"PreSchooler_M_ADHD.png\"),\n",
+    "    os.path.join(FigureTrajectory_folder, \"PreSchooler_M_ADHD.png\"),\n",
     "    dpi=300,\n",
     "    bbox_inches=\"tight\",\n",
     ")"
@@ -135,9 +135,9 @@
     "\n",
     "fig.show()\n",
     "\n",
-    "FigurePattern_folder = os.getenv(\"FigurePattern\")\n",
+    "FigureTrajectory_folder = os.getenv(\"FigureTrajectory\")\n",
     "fig.savefig(\n",
-    "    os.path.join(FigurePattern_folder, \"PreSchooler_M_NoADHD.png\"),\n",
+    "    os.path.join(FigureTrajectory_folder, \"PreSchooler_M_NoADHD.png\"),\n",
     "    dpi=300,\n",
     "    bbox_inches=\"tight\",\n",
     ")"
@@ -190,9 +190,9 @@
     ")\n",
     "fig.show()\n",
     "\n",
-    "FigurePattern_folder = os.getenv(\"FigurePattern\")\n",
+    "FigureTrajectory_folder = os.getenv(\"FigureTrajectory\")\n",
     "fig.savefig(\n",
-    "    os.path.join(FigurePattern_folder, \"PreSchooler_F_ADHD.png\"),\n",
+    "    os.path.join(FigureTrajectory_folder, \"PreSchooler_F_ADHD.png\"),\n",
     "    dpi=300,\n",
     "    bbox_inches=\"tight\",\n",
     ")"
@@ -246,9 +246,9 @@
     "\n",
     "fig.show()\n",
     "\n",
-    "FigurePattern_folder = os.getenv(\"FigurePattern\")\n",
+    "FigureTrajectory_folder = os.getenv(\"FigureTrajectory\")\n",
     "fig.savefig(\n",
-    "    os.path.join(FigurePattern_folder, \"PreSchooler_F_NoADHD.png\"),\n",
+    "    os.path.join(FigureTrajectory_folder, \"PreSchooler_F_NoADHD.png\"),\n",
     "    dpi=300,\n",
     "    bbox_inches=\"tight\",\n",
     ")"
@@ -267,7 +267,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "from matplot_patient_trajectory import MatplotlibPatientTrajectory\n",
+    "from matplot_patient_trajectory import MatplotlibPatientTrajectoryMiddleChildhood\n",
     "from allpackages import warnings, ast, os, pd, load_dotenv\n",
     "import matplotlib.pyplot as plt\n",
     "\n",
@@ -282,7 +282,7 @@
     "\n",
     "print(original_df[\"cluster\"].value_counts())\n",
     "# Create an instance of MatplotlibPatientTrajectory\n",
-    "patient_trajectory = MatplotlibPatientTrajectory()\n",
+    "patient_trajectory = MatplotlibPatientTrajectoryMiddleChildhood()\n",
     "\n",
     "# Call the load_data method\n",
     "processed_df = patient_trajectory.load_data(original_df)\n",
@@ -301,9 +301,9 @@
     ")\n",
     "fig.show()\n",
     "\n",
-    "FigurePattern_folder = os.getenv(\"FigurePattern\")\n",
+    "FigureTrajectory_folder = os.getenv(\"FigureTrajectory\")\n",
     "fig.savefig(\n",
-    "    os.path.join(FigurePattern_folder, \"MiddleChildhood_M_ADHD.png\"),\n",
+    "    os.path.join(FigureTrajectory_folder, \"MiddleChildhood_M_ADHD.png\"),\n",
     "    dpi=300,\n",
     "    bbox_inches=\"tight\",\n",
     ")"
@@ -357,9 +357,9 @@
     "\n",
     "fig.show()\n",
     "\n",
-    "FigurePattern_folder = os.getenv(\"FigurePattern\")\n",
+    "FigureTrajectory_folder = os.getenv(\"FigureTrajectory\")\n",
     "fig.savefig(\n",
-    "    os.path.join(FigurePattern_folder, \"MiddleChildhood_M_NoADHD.png\"),\n",
+    "    os.path.join(FigureTrajectory_folder, \"MiddleChildhood_M_NoADHD.png\"),\n",
     "    dpi=300,\n",
     "    bbox_inches=\"tight\",\n",
     ")"
@@ -413,9 +413,9 @@
     "\n",
     "fig.show()\n",
     "\n",
-    "FigurePattern_folder = os.getenv(\"FigurePattern\")\n",
+    "FigureTrajectory_folder = os.getenv(\"FigureTrajectory\")\n",
     "fig.savefig(\n",
-    "    os.path.join(FigurePattern_folder, \"MiddleChildhood_F_ADHD.png\"),\n",
+    "    os.path.join(FigureTrajectory_folder, \"MiddleChildhood_F_ADHD.png\"),\n",
     "    dpi=300,\n",
     "    bbox_inches=\"tight\",\n",
     ")"
@@ -469,9 +469,9 @@
     "\n",
     "fig.show()\n",
     "\n",
-    "FigurePattern_folder = os.getenv(\"FigurePattern\")\n",
+    "FigureTrajectory_folder = os.getenv(\"FigureTrajectory\")\n",
     "fig.savefig(\n",
-    "    os.path.join(FigurePattern_folder, \"MiddleChildhood_F_NoADHD.png\"),\n",
+    "    os.path.join(FigureTrajectory_folder, \"MiddleChildhood_F_NoADHD.png\"),\n",
     "    dpi=300,\n",
     "    bbox_inches=\"tight\",\n",
     ")"
@@ -522,9 +522,9 @@
     ")\n",
     "fig.show()\n",
     "\n",
-    "FigurePattern_folder = os.getenv(\"FigurePattern\")\n",
+    "FigureTrajectory_folder = os.getenv(\"FigureTrajectory\")\n",
     "fig.savefig(\n",
-    "    os.path.join(FigurePattern_folder, \"Teenager_M_ADHD.png\"),\n",
+    "    os.path.join(FigureTrajectory_folder, \"Teenager_M_ADHD.png\"),\n",
     "    dpi=300,\n",
     "    bbox_inches=\"tight\",\n",
     ")"
@@ -576,9 +576,9 @@
     "\n",
     "fig.show()\n",
     "\n",
-    "FigurePattern_folder = os.getenv(\"FigurePattern\")\n",
+    "FigureTrajectory_folder = os.getenv(\"FigureTrajectory\")\n",
     "fig.savefig(\n",
-    "    os.path.join(FigurePattern_folder, \"Teenager_M_NoADHD.png\"),\n",
+    "    os.path.join(FigureTrajectory_folder, \"Teenager_M_NoADHD.png\"),\n",
     "    dpi=300,\n",
     "    bbox_inches=\"tight\",\n",
     ")"
@@ -629,9 +629,9 @@
     ")\n",
     "fig.show()\n",
     "\n",
-    "FigurePattern_folder = os.getenv(\"FigurePattern\")\n",
+    "FigureTrajectory_folder = os.getenv(\"FigureTrajectory\")\n",
     "fig.savefig(\n",
-    "    os.path.join(FigurePattern_folder, \"Teenager_F_ADHD.png\"),\n",
+    "    os.path.join(FigureTrajectory_folder, \"Teenager_F_ADHD.png\"),\n",
     "    dpi=300,\n",
     "    bbox_inches=\"tight\",\n",
     ")"
@@ -683,9 +683,9 @@
     "\n",
     "fig.show()\n",
     "\n",
-    "FigurePattern_folder = os.getenv(\"FigurePattern\")\n",
+    "FigureTrajectory_folder = os.getenv(\"FigureTrajectory\")\n",
     "fig.savefig(\n",
-    "    os.path.join(FigurePattern_folder, \"Teenager_F_NoADHD.png\"),\n",
+    "    os.path.join(FigureTrajectory_folder, \"Teenager_F_NoADHD.png\"),\n",
     "    dpi=300,\n",
     "    bbox_inches=\"tight\",\n",
     ")"
