--- a/PatientTrajectory/1_DatasetCreation.ipynb
+++ b/PatientTrajectory/1_DatasetCreation.ipynb
@@ -74,9 +74,7 @@
     "\n",
     "# Drop the fdt columns\n",
     "trajectory_df.drop(\"fdt\", axis=1, inplace=True)\n",
-    "\"\"\"\n",
-    "# In the dataframe a patient has multiple episodes, so if patient has multiple episodes, then take the minimum age of patient\n",
-    "# also add the corresponding episode_id\n",
+    "\n",
     "pasient_min = (\n",
     "    trajectory_df.groupby(\"pasient\")\n",
     "    .agg(\n",
@@ -87,19 +85,15 @@
     "    .reset_index()\n",
     ")\n",
     "# rename the column name from age to minimum_age for pasient_min dataframe\n",
-    "pasient_min.rename(columns={\"age\": \"minimum_age\"}, inplace=True)\n",
+    "pasient_min.rename(columns={\"age\": \"initial_age\"}, inplace=True)\n",
     "\n",
     "# Now use the pasient_min dataframe to merge with the trajectory_df dataframe, add a new column minimum_age in the trajectory_df dataframe.\n",
     "# Use the pasient column to merge the two dataframes, if they have same pasient id then add the corresponding age from pasient_min to the trajectory_df minimum_age column for all matched pasient id.\n",
     "trajectory_df = trajectory_df.merge(\n",
-    "    pasient_min[[\"pasient\", \"minimum_age\"]],\n",
+    "    pasient_min[[\"pasient\", \"initial_age\"]],\n",
     "    on=\"pasient\",\n",
     "    how=\"inner\",\n",
     ")\n",
-    "\n",
-    "# rename the age_group column to original_age_group\n",
-    "trajectory_df.rename(columns={\"age_group\": \"original_age_group\"}, inplace=True)\n",
-    "print(len(trajectory_df[\"minimum_age\"]))\n",
     "\n",
     "\n",
     "# From trajectory_df use the minimum_age column and if it is between 0-5 then assign age_group as Preschooler (include 0 to 5.9),\n",
@@ -113,9 +107,10 @@
     "        return \"Teenager\"\n",
     "\n",
     "\n",
-    "trajectory_df[\"age_group\"] = trajectory_df[\"minimum_age\"].apply(assign_age_group)\n",
-    "print(trajectory_df[\"age_group\"].value_counts())\n",
-    "\"\"\"\n",
+    "trajectory_df[\"initial_age_group\"] = trajectory_df[\"initial_age\"].apply(\n",
+    "    assign_age_group\n",
+    ")\n",
+    "\n",
     "\n",
     "display(trajectory_df.head(60))\n",
     "print(trajectory_df.shape)\n",
@@ -131,7 +126,7 @@
     "        \"episode_end_date\",\n",
     "        \"gender\",\n",
     "        \"age\",\n",
-    "        \"age_group\",\n",
+    "        \"initial_age\",\n",
     "        \"diagnosis\",\n",
     "        \"actual_med_Full_ATC\",\n",
     "        \"Length_of_Episode\",\n",
@@ -139,6 +134,8 @@
     "        \"Therapy_ratio\",\n",
     "        \"tillnextepisode\",\n",
     "        \"cluster\",\n",
+    "        \"age_group\",\n",
+    "        \"initial_age_group\",\n",
     "    ]\n",
     "].to_csv(\n",
     "    os.getenv(\"trajectory_df_path\"),\n",
@@ -207,7 +204,7 @@
     "print(\n",
     "    f\"Patients without ADHD or NaN: {trajectory_df[trajectory_df['ADHD'] == 0]['pasient'].nunique()}\"\n",
     ")\n",
-    "\n",
+    "display(trajectory_df.head(60))\n",
     "trajectory_df.to_csv(\n",
     "    os.getenv(\"updated_trajectory_df_path\"),\n",
     "    index=False,\n",
@@ -229,6 +226,7 @@
     "    f\"Gender Distribution (As gender 0 is excluded in the study):{trajectory_df['gender'].value_counts()}\"\n",
     ")\n",
     "\n",
+    "len(trajectory_df[trajectory_df[\"age\"] > 18])\n",
     "# Load and view the formed distribution of ADHD after above encoding\n",
     "# 0       10436\n",
     "# 2        6495\n",
@@ -292,7 +290,7 @@
     "# Select only those data from trajectory_df which has Gender as M, AgeGroup as PreSchooler and ADHD as 1 and save it in a new dataframe preSchooler_M_ADHD\n",
     "preSchooler_M_ADHD = trajectory_df[\n",
     "    (trajectory_df[\"gender\"] == \"M\")\n",
-    "    & (trajectory_df[\"age_group\"] == \"Preschooler\")\n",
+    "    & (trajectory_df[\"initial_age_group\"] == \"Preschooler\")\n",
     "    & (trajectory_df[\"ADHD\"] == 1)\n",
     "]\n",
     "print(f\"Patients: {preSchooler_M_ADHD['pasient'].nunique()}\")\n",
@@ -330,7 +328,7 @@
     "# Select only those data from trajectory_df which has Gender as M, AgeGroup as PreSchooler and ADHD as 0 and save it in a new dataframe preSchooler_M_NoADHD\n",
     "preSchooler_M_NoADHD = trajectory_df[\n",
     "    (trajectory_df[\"gender\"] == \"M\")\n",
-    "    & (trajectory_df[\"age_group\"] == \"Preschooler\")\n",
+    "    & (trajectory_df[\"initial_age_group\"] == \"Preschooler\")\n",
     "    & (trajectory_df[\"ADHD\"] == 0)\n",
     "]\n",
     "print(f\"Patients: {preSchooler_M_NoADHD['pasient'].nunique()}\")\n",
@@ -368,7 +366,7 @@
     "# Select only those data from trajectory_df which has Gender as F, AgeGroup as PreSchooler and ADHD as 1 and save it in a new dataframe preSchooler_F_ADHD\n",
     "preSchooler_F_ADHD = trajectory_df[\n",
     "    (trajectory_df[\"gender\"] == \"F\")\n",
-    "    & (trajectory_df[\"age_group\"] == \"Preschooler\")\n",
+    "    & (trajectory_df[\"initial_age_group\"] == \"Preschooler\")\n",
     "    & (trajectory_df[\"ADHD\"] == 1)\n",
     "]\n",
     "print(f\"Patients: {preSchooler_F_ADHD['pasient'].nunique()}\")\n",
@@ -406,7 +404,7 @@
     "# Select only those data from trajectory_df which has Gender as F, AgeGroup as PreSchooler and ADHD as 0 and save it in a new dataframe preSchooler_F_NoADHD\n",
     "preSchooler_F_NoADHD = trajectory_df[\n",
     "    (trajectory_df[\"gender\"] == \"F\")\n",
-    "    & (trajectory_df[\"age_group\"] == \"Preschooler\")\n",
+    "    & (trajectory_df[\"initial_age_group\"] == \"Preschooler\")\n",
     "    & (trajectory_df[\"ADHD\"] == 0)\n",
     "]\n",
     "print(f\"Patients: {preSchooler_F_NoADHD['pasient'].nunique()}\")\n",
@@ -444,7 +442,7 @@
     "# Select only those data from trajectory_df which has Gender as M, AgeGroup as MiddleChildhood and ADHD as 1 and save it in a new dataframe MiddleChildhood_M_ADHD\n",
     "MiddleChildhood_M_ADHD = trajectory_df[\n",
     "    (trajectory_df[\"gender\"] == \"M\")\n",
-    "    & (trajectory_df[\"age_group\"] == \"MiddleChildhood\")\n",
+    "    & (trajectory_df[\"initial_age_group\"] == \"MiddleChildhood\")\n",
     "    & (trajectory_df[\"ADHD\"] == 1)\n",
     "]\n",
     "print(f\"Patients: {MiddleChildhood_M_ADHD['pasient'].nunique()}\")\n",
@@ -482,7 +480,7 @@
     "# Select only those data from trajectory_df which has Gender as M, AgeGroup as MiddleChildhood and ADHD as 0 and save it in a new dataframe MiddleChildhood_M_NoADHD\n",
     "MiddleChildhood_M_NoADHD = trajectory_df[\n",
     "    (trajectory_df[\"gender\"] == \"M\")\n",
-    "    & (trajectory_df[\"age_group\"] == \"MiddleChildhood\")\n",
+    "    & (trajectory_df[\"initial_age_group\"] == \"MiddleChildhood\")\n",
     "    & (trajectory_df[\"ADHD\"] == 0)\n",
     "]\n",
     "print(f\"Patients: {MiddleChildhood_M_NoADHD['pasient'].nunique()}\")\n",
@@ -520,7 +518,7 @@
     "# Select only those data from trajectory_df which has Gender as F, AgeGroup as MiddleChildhood and ADHD as 1 and save it in a new dataframe MiddleChildhood_F_ADHD\n",
     "MiddleChildhood_F_ADHD = trajectory_df[\n",
     "    (trajectory_df[\"gender\"] == \"F\")\n",
-    "    & (trajectory_df[\"age_group\"] == \"MiddleChildhood\")\n",
+    "    & (trajectory_df[\"initial_age_group\"] == \"MiddleChildhood\")\n",
     "    & (trajectory_df[\"ADHD\"] == 1)\n",
     "]\n",
     "print(f\"Patients: {MiddleChildhood_F_ADHD['pasient'].nunique()}\")\n",
@@ -558,7 +556,7 @@
     "# Select only those data from trajectory_df which has Gender as F, AgeGroup as MiddleChildhood and ADHD as 0 and save it in a new dataframe MiddleChildhood_F_NoADHD\n",
     "MiddleChildhood_F_NoADHD = trajectory_df[\n",
     "    (trajectory_df[\"gender\"] == \"F\")\n",
-    "    & (trajectory_df[\"age_group\"] == \"MiddleChildhood\")\n",
+    "    & (trajectory_df[\"initial_age_group\"] == \"MiddleChildhood\")\n",
     "    & (trajectory_df[\"ADHD\"] == 0)\n",
     "]\n",
     "print(f\"Patients: {MiddleChildhood_F_NoADHD['pasient'].nunique()}\")\n",
@@ -596,7 +594,7 @@
     "# Select only those data from trajectory_df which has Gender as M, AgeGroup as Teenager and ADHD as 1 and save it in a new dataframe Teenager_M_ADHD\n",
     "Teenager_M_ADHD = trajectory_df[\n",
     "    (trajectory_df[\"gender\"] == \"M\")\n",
-    "    & (trajectory_df[\"age_group\"] == \"Teenager\")\n",
+    "    & (trajectory_df[\"initial_age_group\"] == \"Teenager\")\n",
     "    & (trajectory_df[\"ADHD\"] == 1)\n",
     "]\n",
     "print(f\"Patients: {Teenager_M_ADHD['pasient'].nunique()}\")\n",
@@ -632,7 +630,7 @@
     "# Select only those data from trajectory_df which has Gender as M, AgeGroup as Teenager and ADHD as 1 and save it in a new dataframe Teenager_M_NoADHD\n",
     "Teenager_M_NoADHD = trajectory_df[\n",
     "    (trajectory_df[\"gender\"] == \"M\")\n",
-    "    & (trajectory_df[\"age_group\"] == \"Teenager\")\n",
+    "    & (trajectory_df[\"initial_age_group\"] == \"Teenager\")\n",
     "    & (trajectory_df[\"ADHD\"] == 0)\n",
     "]\n",
     "print(f\"Patients: {Teenager_M_NoADHD['pasient'].nunique()}\")\n",
@@ -668,7 +666,7 @@
     "# Select only those data from trajectory_df which has Gender as F, AgeGroup as Teenager and ADHD as 1 and save it in a new dataframe Teenager_F_ADHD\n",
     "Teenager_F_ADHD = trajectory_df[\n",
     "    (trajectory_df[\"gender\"] == \"F\")\n",
-    "    & (trajectory_df[\"age_group\"] == \"Teenager\")\n",
+    "    & (trajectory_df[\"initial_age_group\"] == \"Teenager\")\n",
     "    & (trajectory_df[\"ADHD\"] == 1)\n",
     "]\n",
     "print(f\"Patients: {Teenager_F_ADHD['pasient'].nunique()}\")\n",
@@ -704,7 +702,7 @@
     "# Select only those data from trajectory_df which has Gender as F, AgeGroup as Teenager and ADHD as 0 and save it in a new dataframe Teenager_F_NoADHD\n",
     "Teenager_F_NoADHD = trajectory_df[\n",
     "    (trajectory_df[\"gender\"] == \"F\")\n",
-    "    & (trajectory_df[\"age_group\"] == \"Teenager\")\n",
+    "    & (trajectory_df[\"initial_age_group\"] == \"Teenager\")\n",
     "    & (trajectory_df[\"ADHD\"] == 0)\n",
     "]\n",
     "print(f\"Patients: {Teenager_F_NoADHD['pasient'].nunique()}\")\n",
@@ -724,12 +722,14 @@
    "source": [
     "##### D. Description of the obtained reasult\n",
     "**Episode counts**\n",
-    "1. Total number of records in dataframes of all combinations = 386+1269+120+942+2158+3294+745+2062+1409+3382+927+5935 = 22629\n",
+    "1. Total number of records in dataframes of all combinations = \n",
+    "592+1447+178+1066+2449+3468+899+2311+912+3030+715+5562 = 22629\n",
     "\n",
-    "2. Total number of records in the initial dataframe = 22676 - 47(Gender 0 which is excluded) = 22629\n",
+    "2. Total number of records in the initial dataframe = 22629 + 47(Gender 0 which is excluded) = 22676\n",
     "\n",
     "**Patient counts**\n",
-    "1. Total number of patients in dataframes of all combinations = 375+1221+118+891+1981+3110+674+1959+1265+3157+800+5337 = .... \n",
+    "1. Total number of patients in dataframes of all combinations = \n",
+    "363+1211+113+880+1857+2978+641+1873+829+2834+608+5014 = 19201 + 47 = 19248\n",
     "\n",
     "2. Total number of records in the initial dataframe = .... (Gender 0 which is excluded) \n"
    ]
