select 50 patient for trajectory plot, exclude text in pattern , sort cooccuring graphs

--- a/NetworkGraph/1_CooccuringNetworkGraph.ipynb
+++ b/NetworkGraph/1_CooccuringNetworkGraph.ipynb
@@ -4,7 +4,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### All the possible combinations are 12 for AgeGroup = [\"Preschooler\", \"MiddleSchool\", \"Teenager\"] || Gender = [\"M\", \"F\"] || ADHD_NoADHD = [0, 1] are :\n",
+    "#### A. All the possible combinations are 12 for AgeGroup = [\"Preschooler\", \"MiddleSchool\", \"Teenager\"] || Gender = [\"M\", \"F\"] || ADHD_NoADHD = [0, 1] are :\n",
     "\n",
     "1. Preschooler, Male, ADHD: (Preschooler, M, 1)\n",
     "\n",
@@ -27,7 +27,8 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "#### 1. Coocurring network graph plot which satify this condition Gender = M, AgeGroup = PreSchooler and ADHD(Attention Deficit Hyperactivity Disorder) = 1"
+    "##### 1. Coocurring network graph plot which satify this condition `Gender = M`, `AgeGroup = PreSchooler` and `ADHD(Attention Deficit Hyperactivity Disorder) = 1`\n",
+    "**Selects and plot all the diagnosis associated with F90**"
    ]
   },
   {
@@ -65,21 +66,22 @@
     "print(original_df.shape)\n",
     "\n",
     "network_graph = CoocurringDiagnosisNetworkGraph()\n",
-    "network_graph.load_plot_network_graph(original_df)"
+    "plotted_graph = network_graph.load_plot_network_graph(original_df)\n",
+    "\n",
+    "FigureGraph_folder = os.getenv(\"FigureGraph\")\n",
+    "plotted_graph.savefig(\n",
+    "    os.path.join(FigureGraph_folder, \"PreSchooler_M_ADHD.png\"),\n",
+    "    bbox_inches=\"tight\",\n",
+    ")\n",
+    "plotted_graph.show()"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "1.2. Make the network graph by selecting only the medication codes only from the dummied dataframe"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "#### 3. Coocurring network graph plot which satify this condition Gender = F, AgeGroup = PreSchooler and ADHD_NoADHD = 1"
+    "##### 3. Coocurring network graph plot which satify this condition `Gender = F`, `AgeGroup = PreSchooler` and `ADHD_NoADHD = 1`\n",
+    "**Selects and plot all the diagnosis associated with F90**"
    ]
   },
   {
@@ -116,21 +118,22 @@
     "print(original_df.shape)\n",
     "\n",
     "network_graph = CoocurringDiagnosisNetworkGraph()\n",
-    "network_graph.load_plot_network_graph(original_df)"
+    "plotted_graph = network_graph.load_plot_network_graph(original_df)\n",
+    "\n",
+    "FigureGraph_folder = os.getenv(\"FigureGraph\")\n",
+    "plotted_graph.savefig(\n",
+    "    os.path.join(FigureGraph_folder, \"PreSchooler_F_ADHD.eps\"),\n",
+    "    bbox_inches=\"tight\",\n",
+    ")\n",
+    "plotted_graph.show()"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "3.2. Make the network graph by selecting only the diagnosis codes only from the dummied dataframe"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "#### 5. Coocurring network graph plot which satify this condition Gender = M, AgeGroup = MiddleChildhood and ADHD_NoADHD = 1"
+    "##### 5. Coocurring network graph plot which satify this condition `Gender = M`, `AgeGroup = MiddleChildhood` and `ADHD_NoADHD = 1`\n",
+    "**Selects and plot all the diagnosis associated with F90**"
    ]
   },
   {
@@ -162,28 +165,22 @@
     "print(original_df.shape)\n",
     "\n",
     "network_graph = CoocurringDiagnosisNetworkGraph()\n",
-    "network_graph.load_plot_network_graph(original_df)"
+    "plotted_graph = network_graph.load_plot_network_graph(original_df)\n",
+    "\n",
+    "FigureGraph_folder = os.getenv(\"FigureGraph\")\n",
+    "plotted_graph.savefig(\n",
+    "    os.path.join(FigureGraph_folder, \"MiddleChildhood_M_ADHD.png\"),\n",
+    "    bbox_inches=\"tight\",\n",
+    ")\n",
+    "plotted_graph.show()"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "5.2 Make the network graph by selecting only the diagnosis codes only from the dummied dataframe"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "#### 7. Coocurring network graph plot which satify this condition Gender = F, AgeGroup = MiddleChildhood and ADHD_NoADHD = 1"
+    "##### 7. Coocurring network graph plot which satify this condition `Gender = F`, `AgeGroup = MiddleChildhood` and `ADHD_NoADHD = 1`\n",
+    "**Selects and plot all the diagnosis associated with F90**"
    ]
   },
   {
@@ -214,28 +211,22 @@
     "print(original_df.shape)\n",
     "\n",
     "network_graph = CoocurringDiagnosisNetworkGraph()\n",
-    "network_graph.load_plot_network_graph(original_df)"
+    "plotted_graph = network_graph.load_plot_network_graph(original_df)\n",
+    "\n",
+    "FigureGraph_folder = os.getenv(\"FigureGraph\")\n",
+    "plotted_graph.savefig(\n",
+    "    os.path.join(FigureGraph_folder, \"MiddleChildhood_F_ADHD.png\"),\n",
+    "    bbox_inches=\"tight\",\n",
+    ")\n",
+    "plotted_graph.show()"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "7.2. Make the network graph by selecting only the diagnosis codes only from the dummied dataframe"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "#### 9. Coocurring network graph plot which satify this condition Gender = M, AgeGroup = Teenager and ADHD_NoADHD = 1"
+    "##### 9. Coocurring network graph plot which satify this condition `Gender = M`, `AgeGroup = Teenager` and `ADHD_NoADHD = 1`\n",
+    "**Selects and plot all the diagnosis associated with F90**"
    ]
   },
   {
@@ -265,28 +256,22 @@
     "print(original_df.shape)\n",
     "\n",
     "network_graph = CoocurringDiagnosisNetworkGraph()\n",
-    "network_graph.load_plot_network_graph(original_df)"
+    "plotted_graph = network_graph.load_plot_network_graph(original_df)\n",
+    "\n",
+    "FigureGraph_folder = os.getenv(\"FigureGraph\")\n",
+    "plotted_graph.savefig(\n",
+    "    os.path.join(FigureGraph_folder, \"Teenager_M_ADHD.png\"),\n",
+    "    bbox_inches=\"tight\",\n",
+    ")\n",
+    "plotted_graph.show()"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "9.1. Make the network graph by selecting only the diagnosis codes only from the dummied dataframe"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "#### 11. Coocurring network graph plot which satify this condition Gender = F, AgeGroup = Teenager and ADHD_NoADHD = 1"
+    "##### 11. Coocurring network graph plot which satify this condition `Gender = F`, `AgeGroup = Teenager` and `ADHD_NoADHD = 1`\n",
+    "**Selects and plot all the diagnosis associated with F90**"
    ]
   },
   {
@@ -315,14 +300,21 @@
     "print(original_df.shape)\n",
     "\n",
     "network_graph = CoocurringDiagnosisNetworkGraph()\n",
-    "network_graph.load_plot_network_graph(original_df)"
+    "plotted_graph = network_graph.load_plot_network_graph(original_df)\n",
+    "\n",
+    "FigureGraph_folder = os.getenv(\"FigureGraph\")\n",
+    "plotted_graph.savefig(\n",
+    "    os.path.join(FigureGraph_folder, \"Teenager_F_ADHD.png\"),\n",
+    "    bbox_inches=\"tight\",\n",
+    ")\n",
+    "plotted_graph.show()"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "11.2. Make the network graph by selecting only the diagnosis codes only from the dummied dataframe"
+    "### B. Level 1 hirarchy of ICD codes and cooccurance network graph"
    ]
   },
   {
@@ -330,7 +322,31 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "####################\n",
+    "\"\"\"Uses the network_graph_backend to create a co-occurring network graph from a dataframe for the diagnosis codes only\"\"\"\n",
+    "# 1. Finds all the columns that starts with F90 in the dataframe\n",
+    "# 2. List them in a list as string\n",
+    "# 3. Create a column for F90 diagnosis and count the number of patients that have both F90 and the other diagnosis\n",
+    "####################\n",
+    "from allpackages import warnings, ast, os, nx, pd, plt, load_dotenv\n",
+    "from network_graph_backend import CoocurringDiagnosisNetworkGraph_higherlevel1\n",
+    "\n",
+    "load_dotenv()\n",
+    "\n",
+    "# Get SubsetDataset folder path from environment variables & read subset dataset CSV file\n",
+    "subset_dataset_folder = os.getenv(\"SubsetDataset\")\n",
+    "subset_dataset = os.path.join(\n",
+    "    subset_dataset_folder, \"SubDataset_PreSchooler_M_ADHD.csv\"\n",
+    ")\n",
+    "\n",
+    "original_df = pd.read_csv(subset_dataset)\n",
+    "\n",
+    "print(original_df.shape)\n",
+    "\n",
+    "network_graph = CoocurringDiagnosisNetworkGraph_higherlevel1()\n",
+    "network_graph.load_plot_network_graph(original_df)"
+   ]
   }
  ],
  "metadata": {
