--- a/PatientTrajectory/4_AllSimilarPatientTeajectory.ipynb
+++ b/PatientTrajectory/4_AllSimilarPatientTeajectory.ipynb
@@ -72,9 +72,9 @@
     "]\n",
     "unique_patients = processed_df[\"pasient\"].unique()\n",
     "fig, axes = plt.subplots(1, 1, figsize=(50, 24))\n",
-    "fig.suptitle(\n",
-    "    \"Pre-schooler, Male, ADHD patients, episode based patterns over time\",\n",
-    ")\n",
+    "# fig.suptitle(\n",
+    "#     \"Pre-schooler, Male, ADHD patients, episode based patterns over time\",\n",
+    "# )\n",
     "fig.tight_layout(pad=2)\n",
     "patient_trajectory.patient_timeline_plot_yearly(\n",
     "    processed_df, axes, custom_colors, unique_patients\n",
@@ -83,7 +83,7 @@
     "\n",
     "FigurePattern_folder = os.getenv(\"FigurePattern\")\n",
     "fig.savefig(\n",
-    "    os.path.join(FigurePattern_folder, \"PreSchooler_M_ADHD.png\"),\n",
+    "    os.path.join(FigurePattern_folder, \"PreSchooler_M_ADHD.jpg\"),\n",
     "    dpi=300,\n",
     "    bbox_inches=\"tight\",\n",
     ")"
@@ -126,7 +126,7 @@
     "]\n",
     "unique_patients = processed_df[\"pasient\"].unique()\n",
     "fig, axes = plt.subplots(1, 1, figsize=(50, 24))\n",
-    "fig.suptitle(\"Pre-school,Male, No ADHD patients, episode based patterns over time\")\n",
+    "# fig.suptitle(\"Pre-school,Male, No ADHD patients, episode based patterns over time\")\n",
     "fig.tight_layout(pad=2)\n",
     "patient_trajectory.patient_timeline_plot_yearly(\n",
     "    processed_df, axes, custom_colors, unique_patients\n",
@@ -135,7 +135,7 @@
     "\n",
     "FigurePattern_folder = os.getenv(\"FigurePattern\")\n",
     "fig.savefig(\n",
-    "    os.path.join(FigurePattern_folder, \"PreSchooler_M_NoADHD.png\"),\n",
+    "    os.path.join(FigurePattern_folder, \"PreSchooler_M_NoADHD.jpg\"),\n",
     "    dpi=300,\n",
     "    bbox_inches=\"tight\",\n",
     ")"
@@ -181,7 +181,7 @@
     "]\n",
     "unique_patients = processed_df[\"pasient\"].unique()\n",
     "fig, axes = plt.subplots(1, 1, figsize=(50, 24))\n",
-    "fig.suptitle(\"Pre-school,Female, ADHD patients, episode based patterns over time\")\n",
+    "# fig.suptitle(\"Pre-school,Female, ADHD patients, episode based patterns over time\")\n",
     "fig.tight_layout(pad=2)\n",
     "patient_trajectory.patient_timeline_plot_yearly(\n",
     "    processed_df, axes, custom_colors, unique_patients\n",
@@ -190,7 +190,7 @@
     "\n",
     "FigurePattern_folder = os.getenv(\"FigurePattern\")\n",
     "fig.savefig(\n",
-    "    os.path.join(FigurePattern_folder, \"PreSchooler_F_ADHD.png\"),\n",
+    "    os.path.join(FigurePattern_folder, \"PreSchooler_F_ADHD.jpg\"),\n",
     "    dpi=300,\n",
     "    bbox_inches=\"tight\",\n",
     ")"
@@ -236,7 +236,7 @@
     "]\n",
     "unique_patients = processed_df[\"pasient\"].unique()\n",
     "fig, axes = plt.subplots(1, 1, figsize=(50, 24))\n",
-    "fig.suptitle(\"PreSchooler, Female, No ADHD patients, episode based patterns over time\")\n",
+    "# fig.suptitle(\"PreSchooler, Female, No ADHD patients, episode based patterns over time\")\n",
     "fig.tight_layout(pad=2)\n",
     "patient_trajectory.patient_timeline_plot_yearly(\n",
     "    processed_df, axes, custom_colors, unique_patients\n",
@@ -246,7 +246,7 @@
     "\n",
     "FigurePattern_folder = os.getenv(\"FigurePattern\")\n",
     "fig.savefig(\n",
-    "    os.path.join(FigurePattern_folder, \"PreSchooler_F_NoADHD.png\"),\n",
+    "    os.path.join(FigurePattern_folder, \"PreSchooler_F_NoADHD.jpg\"),\n",
     "    dpi=300,\n",
     "    bbox_inches=\"tight\",\n",
     ")"
@@ -292,7 +292,7 @@
     "]\n",
     "unique_patients = processed_df[\"pasient\"].unique()\n",
     "fig, axes = plt.subplots(1, 1, figsize=(50, 24))\n",
-    "fig.suptitle(\"Middle Childhood, Male, ADHD patients, episode based patterns over time\")\n",
+    "# fig.suptitle(\"Middle Childhood, Male, ADHD patients, episode based patterns over time\")\n",
     "fig.tight_layout(pad=2)\n",
     "patient_trajectory.patient_timeline_plot_yearly(\n",
     "    processed_df, axes, custom_colors, unique_patients\n",
@@ -301,7 +301,7 @@
     "\n",
     "FigurePattern_folder = os.getenv(\"FigurePattern\")\n",
     "fig.savefig(\n",
-    "    os.path.join(FigurePattern_folder, \"MiddleChildhood_M_ADHD.png\"),\n",
+    "    os.path.join(FigurePattern_folder, \"MiddleChildhood_M_ADHD.jpg\"),\n",
     "    dpi=300,\n",
     "    bbox_inches=\"tight\",\n",
     ")"
@@ -347,9 +347,9 @@
     "]\n",
     "unique_patients = processed_df[\"pasient\"].unique()\n",
     "fig, axes = plt.subplots(1, 1, figsize=(50, 24))\n",
-    "fig.suptitle(\n",
-    "    \"Middle Childhood, Male, No ADHD patients, episode based patterns over time\"\n",
-    ")\n",
+    "# fig.suptitle(\n",
+    "#     \"Middle Childhood, Male, No ADHD patients, episode based patterns over time\"\n",
+    "# )\n",
     "fig.tight_layout(pad=2)\n",
     "patient_trajectory.patient_timeline_plot_yearly(\n",
     "    processed_df, axes, custom_colors, unique_patients\n",
@@ -358,7 +358,7 @@
     "\n",
     "FigurePattern_folder = os.getenv(\"FigurePattern\")\n",
     "fig.savefig(\n",
-    "    os.path.join(FigurePattern_folder, \"MiddleChildhood_M_NoADHD.png\"),\n",
+    "    os.path.join(FigurePattern_folder, \"MiddleChildhood_M_NoADHD.jpg\"),\n",
     "    dpi=300,\n",
     "    bbox_inches=\"tight\",\n",
     ")"
@@ -404,9 +404,9 @@
     "]\n",
     "unique_patients = processed_df[\"pasient\"].unique()\n",
     "fig, axes = plt.subplots(1, 1, figsize=(50, 24))\n",
-    "fig.suptitle(\n",
-    "    \"Middle Childhood, Female, ADHD patients, episode based patterns over time\"\n",
-    ")\n",
+    "# fig.suptitle(\n",
+    "#     \"Middle Childhood, Female, ADHD patients, episode based patterns over time\"\n",
+    "# )\n",
     "fig.tight_layout(pad=2)\n",
     "patient_trajectory.patient_timeline_plot_yearly(\n",
     "    processed_df, axes, custom_colors, unique_patients\n",
@@ -415,7 +415,7 @@
     "\n",
     "FigurePattern_folder = os.getenv(\"FigurePattern\")\n",
     "fig.savefig(\n",
-    "    os.path.join(FigurePattern_folder, \"MiddleChildhood_F_ADHD.png\"),\n",
+    "    os.path.join(FigurePattern_folder, \"MiddleChildhood_F_ADHD.jpg\"),\n",
     "    dpi=300,\n",
     "    bbox_inches=\"tight\",\n",
     ")"
@@ -462,9 +462,9 @@
     "]\n",
     "unique_patients = processed_df[\"pasient\"].unique()\n",
     "fig, axes = plt.subplots(1, 1, figsize=(50, 24))\n",
-    "fig.suptitle(\n",
-    "    \"Middle Childhood, Female, No ADHD patients, episode based patterns over time\"\n",
-    ")\n",
+    "# fig.suptitle(\n",
+    "#     \"Middle Childhood, Female, No ADHD patients, episode based patterns over time\"\n",
+    "# )\n",
     "fig.tight_layout(pad=2)\n",
     "patient_trajectory.patient_timeline_plot_yearly(\n",
     "    processed_df, axes, custom_colors, unique_patients\n",
@@ -474,7 +474,7 @@
     "\n",
     "FigurePattern_folder = os.getenv(\"FigurePattern\")\n",
     "fig.savefig(\n",
-    "    os.path.join(FigurePattern_folder, \"MiddleChildhood_F_NoADHD.png\"),\n",
+    "    os.path.join(FigurePattern_folder, \"MiddleChildhood_F_NoADHD.jpg\"),\n",
     "    dpi=300,\n",
     "    bbox_inches=\"tight\",\n",
     ")"
@@ -518,7 +518,7 @@
     "]\n",
     "unique_patients = processed_df[\"pasient\"].unique()\n",
     "fig, axes = plt.subplots(1, 1, figsize=(50, 24))\n",
-    "fig.suptitle(\"Teenager, Male, ADHD patients, episode based patterns over time\")\n",
+    "# fig.suptitle(\"Teenager, Male, ADHD patients, episode based patterns over time\")\n",
     "fig.tight_layout(pad=2)\n",
     "patient_trajectory.patient_timeline_plot_yearly(\n",
     "    processed_df, axes, custom_colors, unique_patients\n",
@@ -527,7 +527,7 @@
     "\n",
     "FigurePattern_folder = os.getenv(\"FigurePattern\")\n",
     "fig.savefig(\n",
-    "    os.path.join(FigurePattern_folder, \"Teenager_M_ADHD.png\"),\n",
+    "    os.path.join(FigurePattern_folder, \"Teenager_M_ADHD.jpg\"),\n",
     "    dpi=300,\n",
     "    bbox_inches=\"tight\",\n",
     ")"
@@ -571,7 +571,7 @@
     "]\n",
     "unique_patients = processed_df[\"pasient\"].unique()\n",
     "fig, axes = plt.subplots(1, 1, figsize=(50, 24))\n",
-    "fig.suptitle(\"Teenager, Male, No ADHD patients, episode based patterns over time\")\n",
+    "# fig.suptitle(\"Teenager, Male, No ADHD patients, episode based patterns over time\")\n",
     "fig.tight_layout(pad=2)\n",
     "patient_trajectory.patient_timeline_plot_yearly(\n",
     "    processed_df, axes, custom_colors, unique_patients\n",
@@ -580,7 +580,7 @@
     "\n",
     "FigurePattern_folder = os.getenv(\"FigurePattern\")\n",
     "fig.savefig(\n",
-    "    os.path.join(FigurePattern_folder, \"Teenager_M_NoADHD.png\"),\n",
+    "    os.path.join(FigurePattern_folder, \"Teenager_M_NoADHD.jpg\"),\n",
     "    dpi=300,\n",
     "    bbox_inches=\"tight\",\n",
     ")"
@@ -623,7 +623,7 @@
     "]\n",
     "unique_patients = processed_df[\"pasient\"].unique()\n",
     "fig, axes = plt.subplots(1, 1, figsize=(50, 24))\n",
-    "fig.suptitle(\"Teenager, Female, ADHD patients, episode based patterns over time\")\n",
+    "# fig.suptitle(\"Teenager, Female, ADHD patients, episode based patterns over time\")\n",
     "fig.tight_layout(pad=2)\n",
     "patient_trajectory.patient_timeline_plot_yearly(\n",
     "    processed_df, axes, custom_colors, unique_patients\n",
@@ -632,7 +632,7 @@
     "\n",
     "FigurePattern_folder = os.getenv(\"FigurePattern\")\n",
     "fig.savefig(\n",
-    "    os.path.join(FigurePattern_folder, \"Teenager_F_ADHD.png\"),\n",
+    "    os.path.join(FigurePattern_folder, \"Teenager_F_ADHD.jpg\"),\n",
     "    dpi=300,\n",
     "    bbox_inches=\"tight\",\n",
     ")"
@@ -675,7 +675,7 @@
     "]\n",
     "unique_patients = processed_df[\"pasient\"].unique()\n",
     "fig, axes = plt.subplots(1, 1, figsize=(50, 24))\n",
-    "fig.suptitle(\"Teenager, Female, No ADHD patients, episode based patterns over time\")\n",
+    "# fig.suptitle(\"Teenager, Female, No ADHD patients, episode based patterns over time\")\n",
     "fig.tight_layout(pad=2)\n",
     "patient_trajectory.patient_timeline_plot_yearly(\n",
     "    processed_df, axes, custom_colors, unique_patients\n",
@@ -684,7 +684,7 @@
     "\n",
     "FigurePattern_folder = os.getenv(\"FigurePattern\")\n",
     "fig.savefig(\n",
-    "    os.path.join(FigurePattern_folder, \"Teenager_F_NoADHD.png\"),\n",
+    "    os.path.join(FigurePattern_folder, \"Teenager_F_NoADHD.jpg\"),\n",
     "    dpi=300,\n",
     "    bbox_inches=\"tight\",\n",
     ")"
